# kursovaya

./: CMakeLists.txt  LICENSE  main.cpp  plot.py  stdafx.h  Хищникжертва.cpp
